e2e test workflow improvements (#234)
* e2e: Simplify TTS_TOKEN/HCLOUD_TOKEN handling

Also make sure the token retrieved from TTS is masked in logs.

* e2e: increase concurrency to 6

Previously, ginkgo was deciding on concurrency based on processor cores
on the test runner. This is a useless heuristic for this e2e test suite
as the tests are not taxing on the CPU.

* e2e: run test suite on PRs

* e2e: limit concurrency on workflow

* Revert "e2e: run test suite on PRs"

This reverts commit f2e2d486b0048522bc543ded5944dbd72b06f616.

--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -1,5 +1,6 @@
 name: Run e2e tests
 on: [push]
+concurrency: ci-${{ github.ref }}
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,30 +15,22 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Check whether HCLOUD_TOKEN needs to be fetched from TTS
-      id: check_tts
+    - name: HCLOUD_TOKEN
       env:
         TTS_TOKEN: ${{ secrets.TTS_TOKEN }}
         HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
       run: |
-        echo "::set-output name=tts_token_set::${{ env.TTS_TOKEN != '' }}"
-        echo "::set-output name=hcloud_token_set::${{ env.HCLOUD_TOKEN != '' }}"
-    - name: Fetch HCLOUD_TOKEN
-      if: steps.check_tts.outputs.tts_token_set == 'true'
-      env:
-        TTS_TOKEN: ${{ secrets.TTS_TOKEN }}
-      run: |
-        echo "HCLOUD_TOKEN=$(./script/get-token.sh)" >> $GITHUB_ENV
-    - name: Set HCLOUD_TOKEN directly
-      if: steps.check_tts.outputs.hcloud_token_set == 'true'
-      env:
-        HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
-      run: |
-        echo "HCLOUD_TOKEN=$HCLOUD_TOKEN" >> $GITHUB_ENV
-    - name: Blow up if no HCLOUD_TOKEN or TTS_TOKEN set.
-      if: steps.check_tts.outputs.hcloud_token_set == 'false' && steps.check_tts.outputs.tts_token_set == 'false'
-      run: |
-        echo "::error ::Couldn't determine HCLOUD_TOKEN. Check your repository secrets are setup correctly."
+        set -ueo pipefail
+        if [[ "${TTS_TOKEN:-}" != "" ]]; then
+          token="$(./script/get-token.sh)"
+          echo "::add-mask::$token"
+          echo "HCLOUD_TOKEN=$token" >> "$GITHUB_ENV"
+        elif [[ "${HCLOUD_TOKEN:-}" != "" ]]; then
+          echo "HCLOUD_TOKEN=$HCLOUD_TOKEN" >> "$GITHUB_ENV"
+        else
+          echo "::error ::Couldn't determine HCLOUD_TOKEN. Check that repository secrets are setup correctly."
+          exit 1
+        fi
     - uses: actions/cache@v2
       with:
         path: |
