--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -191,7 +191,7 @@ spec:
           imagePullPolicy: Always
           image: k8s.gcr.io/sig-storage/livenessprobe:v2.3.0
           args:
-            - --csi-address=/run/csi/socket         
+            - --csi-address=/run/csi/socket
           volumeMounts:
             - mountPath: /run/csi
               name: socket-dir
@@ -297,6 +297,8 @@ spec:
         - name: liveness-probe
           imagePullPolicy: Always
           image: k8s.gcr.io/sig-storage/livenessprobe:v2.3.0
+          args:
+            - --csi-address=/run/csi/socket
           volumeMounts:
             - mountPath: /run/csi
               name: plugin-dir
