--- a/deploy/kubernetes/controller/rbac.yaml
+++ b/deploy/kubernetes/controller/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: hcloud-csi
+  name: hcloud-csi-controller
   namespace: kube-system
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: hcloud-csi
+  name: hcloud-csi-controller
 rules:
 # attacher
 - apiGroups: [""]
@@ -62,12 +62,12 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: hcloud-csi
+  name: hcloud-csi-controller
 subjects:
 - kind: ServiceAccount
-  name: hcloud-csi
+  name: hcloud-csi-controller
   namespace: kube-system
 roleRef:
   kind: ClusterRole
-  name: hcloud-csi
+  name: hcloud-csi-controller
   apiGroup: rbac.authorization.k8s.io
