Switch Controller to Deployment, plus other tweaks
The controller does not need to be a StatefulSet, it is not inherently
stateful. The various sidecars all perform leader election using the
standard k8s Lease approach.

As part of switching to Deployment, drop the governing serviceName field
which was referencing a non-existent Service anyway.

Also remove the node affinity preventing the Deployment from scheduling
replicas on Hetzner root servers. This is not necessary - the controller
should run on root servers just fine, since it's really just responsible
for issuing requests to Hetzner Cloud API in response to CSI Driver
requests. It's only the Node DaemonSet that should not be scheduled on
root servers.

Finally, drop the privileged security context - the controller is not
performing any privileged operations.

--- a/deploy/kubernetes/controller/deployment.yaml
+++ b/deploy/kubernetes/controller/deployment.yaml
@@ -1,4 +1,4 @@
-kind: StatefulSet
+kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: hcloud-csi-controller
@@ -7,23 +7,13 @@ spec:
   selector:
     matchLabels:
       app: hcloud-csi-controller
-  serviceName: hcloud-csi-controller
   replicas: 1
   template:
     metadata:
       labels:
         app: hcloud-csi-controller
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: "instance.hetzner.cloud/is-root-server"
-                operator: NotIn
-                values:
-                - "true"    
-      serviceAccount: hcloud-csi-controller
+      serviceAccountName: hcloud-csi-controller
       containers:
       - name: csi-attacher
         image: k8s.gcr.io/sig-storage/csi-attacher:v3.2.1
@@ -80,8 +70,6 @@ spec:
           initialDelaySeconds: 10
           timeoutSeconds: 3
           periodSeconds: 2
-        securityContext:
-          privileged: true
       - name: liveness-probe
         imagePullPolicy: Always
         image: k8s.gcr.io/sig-storage/livenessprobe:v2.3.0
