Remove hcloud API calls from most Node code paths
In the various Node stage/unstage/publish/unpublish methods there was an
established pattern of requiring the csi.Volume object so that an API
call could be made to look up the volume details from the Hetzner Cloud
API.

In most of the code paths (unstaging, unpublishing in particular), this
lookup is entirely unnecessary. In fact the returned Volume object was
not being used for anything other than a log.Debug call.

In the case of the stage/publish calls, the volume lookup provided the
required LinuxDevice field (so the Node driver knows where the volume
is actually located in /dev). In this case, however, the CSI spec offers
a better alternative - PublishContext.

The ControllerPublishVolume call is responsible for doing the actual
attach of a hcloud volume to a particular node. The response allows some
arbitrary key/value (map[string]string) data to be returned. This is the
perfect time to provide the necessary LinuxDevice information. This
context is then provided to the Node Publish/Stage methods.

There's a few advantages to this change:

 * Reduce calls to the hcloud API server.
 * Reduce the privilege necessary for the Node DaemonSet.
 * ~350 less lines of code

The second point can't be fully realized yet - it's my intent to remove
the HCLOUD_TOKEN from the DaemonSet altogether. But I can't, just yet.

Unfortunately the resize code path will require a bit more work, but I'm
sure I'll be able to achieve that in some follow-up work, at which point
I will also do the removal of the HCLOUD_TOKEN from the DaemonSet.

--- a/deploy/kubernetes/hcloud-csi.yml
+++ b/deploy/kubernetes/hcloud-csi.yml
@@ -245,7 +245,7 @@ spec:
             secretKeyRef:
               key: token
               name: hcloud-csi
-        image: hetznercloud/hcloud-csi-driver:1.6.0
+        image: hetznercloud/hcloud-csi-driver:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
@@ -334,7 +334,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
-        image: hetznercloud/hcloud-csi-driver:1.6.0
+        image: hetznercloud/hcloud-csi-driver:latest
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 5
