--- a/chart/templates/controller/deployment.yaml
+++ b/chart/templates/controller/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ template "common.names.serviceAccountName" . }}-controller
-      {{- include "common.images.pullSecrets" (dict "images" (list .Values.controller.image) "global" .Values.global) | nindent 6 }}
+      {{- include "common.images.pullSecrets" (dict "images" (list .Values.controller.image) "context" .) | nindent 6 }}
       {{- if .Values.controller.affinity }}
       affinity: {{- include "common.tplvalues.render" ( dict "value" .Values.controller.affinity "context" $) | nindent 8 }}
       {{- end }}
@@ -73,7 +73,7 @@ spec:
         {{- end }}
       containers:
         - name: csi-attacher
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.controller.image.csiAttacher "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.controller.image.csiAttacher.name . }}
           imagePullPolicy: {{ .Values.controller.image.csiAttacher.pullPolicy }}
           {{- if .Values.controller.resources.csiAttacher }}
           resources: {{- toYaml .Values.controller.resources.csiAttacher | nindent 12 }}
@@ -89,7 +89,7 @@ spec:
             mountPath: /run/csi
 
         - name: csi-resizer
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.controller.image.csiResizer "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.controller.image.csiResizer.name . }}
           imagePullPolicy: {{ .Values.controller.image.csiResizer.pullPolicy }}
           {{- if .Values.controller.resources.csiResizer }}
           resources: {{- toYaml .Values.controller.resources.csiResizer | nindent 12 }}
@@ -104,7 +104,7 @@ spec:
             mountPath: /run/csi
 
         - name: csi-provisioner
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.controller.image.csiProvisioner "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.controller.image.csiProvisioner.name . }}
           imagePullPolicy: {{ .Values.controller.image.csiProvisioner.pullPolicy }}
           {{- if .Values.controller.resources.csiProvisioner }}
           resources: {{- toYaml .Values.controller.resources.csiProvisioner | nindent 12 }}
@@ -121,7 +121,7 @@ spec:
             mountPath: /run/csi
 
         - name: liveness-probe
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.controller.image.livenessProbe "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.controller.image.livenessProbe.name . }}
           imagePullPolicy: {{ .Values.controller.image.livenessProbe.pullPolicy }}
           {{- if .Values.controller.resources.livenessProbe }}
           resources: {{- toYaml .Values.controller.resources.livenessProbe | nindent 12 }}
@@ -131,7 +131,7 @@ spec:
             name: socket-dir
 
         - name: hcloud-csi-driver
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.controller.image.hcloudCSIDriver "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.controller.image.hcloudCSIDriver.name . }}
           imagePullPolicy: {{ .Values.controller.image.hcloudCSIDriver.pullPolicy }}
           command: [/bin/hcloud-csi-driver-controller]
           env:
