--- a/chart/templates/node/daemonset.yaml
+++ b/chart/templates/node/daemonset.yaml
@@ -38,7 +38,7 @@ spec:
         {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 8 }}
         {{- end }}
     spec:
-      {{- include "common.images.pullSecrets" (dict "images" (list .Values.node.image ) "global" .Values.global) | nindent 6 }}
+      {{- include "common.images.pullSecrets" (dict "images" (list .Values.node.image ) "context" .) | nindent 6 }}
       {{- if .Values.node.hostNetwork }}
       hostNetwork: true
       {{- end }}
@@ -74,7 +74,7 @@ spec:
         {{- end }}
       containers:
         - name: csi-node-driver-registrar
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.node.image.csiNodeDriverRegistrar "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.node.image.csiNodeDriverRegistrar.name . }}
           imagePullPolicy: {{ .Values.node.image.csiNodeDriverRegistrar.pullPolicy }}
           args:
             - --kubelet-registration-path=/var/lib/kubelet/plugins/csi.hetzner.cloud/socket
@@ -87,7 +87,7 @@ spec:
           resources: {{- toYaml .Values.node.resources.csiNodeDriverRegistrar | nindent 12 }}
           {{- end }}
         - name: liveness-probe
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.node.image.livenessProbe "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.node.image.livenessProbe.name . }}
           imagePullPolicy: {{ .Values.node.image.livenessProbe.pullPolicy }}
           volumeMounts:
           - mountPath: /run/csi
@@ -96,7 +96,7 @@ spec:
           resources: {{- toYaml .Values.node.resources.livenessProbe | nindent 12 }}
           {{- end }}
         - name: hcloud-csi-driver
-          image: {{ include "common.images.image" (dict "imageRoot" .Values.node.image.hcloudCSIDriver "global" .Values.global "all" $) }}
+          image: {{ tpl .Values.node.image.hcloudCSIDriver.name . }}
           imagePullPolicy: {{ .Values.node.image.hcloudCSIDriver.pullPolicy }}
           command: [/bin/hcloud-csi-driver-node]
           volumeMounts:
