--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,21 +1,16 @@
 ## @section Global parameters
-## Global Docker image parameters
-## Please, note that this will override the image parameters, including dependencies, configured to use the global value
-## Current available global Docker image parameters: imageRegistry, imagePullSecrets and storageClass
+## Global Container image parameters
+## Current available global Container image parameters: imagePullSecrets
 ##
 
-## @param global.imageRegistry Global Docker image registry
-## @param global.imagePullSecrets Global Docker registry secret names as an array
-## @param global.storageClass Global StorageClass for Persistent Volume(s)
+## @param global.imagePullSecrets Global container registry secret names as an array
 ##
 global:
-  imageRegistry: ""
   ## E.g.
   ## imagePullSecrets:
   ##   - myRegistryKeySecretName
   ##
   imagePullSecrets: []
-  storageClass: ""
 
 ## @section Common parameters
 ##
@@ -46,43 +41,25 @@ extraDeploy: []
 ## Controller
 ##
 controller:
-  ## @param controller.image.csiAttacher.registry csi-attacher image registry
-  ## @param controller.image.csiAttacher.repository csi-attacher image repository
-  ## @param controller.image.csiAttacher.tag csi-attacher image tag (immutable tags are recommended)
-  ## @param controller.image.csiAttacher.digest csi-attacher image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param controller.image.csiAttacher.name full path to csi-attacher image (including tag/digest & registry)
   ## @param controller.image.csiAttacher.pullPolicy csi-attacher image pull policy
   ## @param controller.image.csiAttacher.pullSecrets csi-attacher image pull secrets
-  ## @param controller.image.csiResizer.registry csi-resizer image registry
-  ## @param controller.image.csiResizer.repository csi-resizer image repository
-  ## @param controller.image.csiResizer.tag csi-resizer image tag (immutable tags are recommended)
-  ## @param controller.image.csiResizer.digest csi-resizer image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param controller.image.csiResizer.name full path to csi-resizer image (including tag/digest & registry)
   ## @param controller.image.csiResizer.pullPolicy csi-resizer image pull policy
   ## @param controller.image.csiResizer.pullSecrets csi-resizer image pull secrets
-  ## @param controller.image.csiProvisioner.registry csi-provisioner image registry
-  ## @param controller.image.csiProvisioner.repository csi-provisioner image repository
-  ## @param controller.image.csiProvisioner.tag csi-provisioner image tag (immutable tags are recommended)
-  ## @param controller.image.csiProvisioner.digest csi-provisioner image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param controller.image.csiProvisioner.name full path to csi-provisioner image (including tag/digest & registry)
   ## @param controller.image.csiProvisioner.pullPolicy csi-provisioner image pull policy
   ## @param controller.image.csiProvisioner.pullSecrets csi-provisioner image pull secrets
-  ## @param controller.image.livenessProbe.registry liveness-probe image registry
-  ## @param controller.image.livenessProbe.repository liveness-probe image repository
-  ## @param controller.image.livenessProbe.tag liveness-probe image tag (immutable tags are recommended)
-  ## @param controller.image.livenessProbe.digest liveness-probe image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param controller.image.livenessProbe.name full path to liveness-probe image (including tag/digest & registry)
   ## @param controller.image.livenessProbe.pullPolicy liveness-probe image pull policy
   ## @param controller.image.livenessProbe.pullSecrets liveness-probe image pull secrets
-  ## @param controller.image.hcloudCSIDriver.registry hcloud-csi-driver image registry
-  ## @param controller.image.hcloudCSIDriver.repository hcloud-csi-driver image repository
-  ## @param controller.image.hcloudCSIDriver.tag hcloud-csi-driver image tag (immutable tags are recommended)
-  ## @param controller.image.hcloudCSIDriver.digest hcloud-csi-driver image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param controller.image.hcloudCSIDriver.name full path to hcloud-csi-driver image (including tag/digest & registry)
   ## @param controller.image.hcloudCSIDriver.pullPolicy hcloud-csi-driver image pull policy
   ## @param controller.image.hcloudCSIDriver.pullSecrets hcloud-csi-driver image pull secrets
   ##
   image:
     csiAttacher:
-      registry: registry.k8s.io
-      repository: sig-storage/csi-attacher
-      tag: v4.1.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/csi-attacher:v4.1.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -98,10 +75,7 @@ controller:
       pullSecrets: []
 
     csiResizer:
-      registry: registry.k8s.io
-      repository: sig-storage/csi-resizer
-      tag: v1.7.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/csi-resizer:v1.7.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -117,10 +91,7 @@ controller:
       pullSecrets: []
 
     csiProvisioner:
-      registry: registry.k8s.io
-      repository: sig-storage/csi-provisioner
-      tag: v3.4.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/csi-provisioner:v3.4.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -136,10 +107,7 @@ controller:
       pullSecrets: []
     
     livenessProbe:
-      registry: registry.k8s.io
-      repository: sig-storage/livenessprobe
-      tag: v2.9.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/livenessprobe:v2.9.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -155,10 +123,7 @@ controller:
       pullSecrets: []
 
     hcloudCSIDriver:
-      registry: docker.io
-      repository: hetznercloud/hcloud-csi-driver
-      tag: 'v{{ .Chart.Version }}'
-      digest: ""
+      name: docker.io/hetznercloud/hcloud-csi-driver:v{{ .Chart.Version }}
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -407,31 +372,19 @@ controller:
 ## Node
 ##
 node:
-  ## @param node.image.csiNodeDriverRegistrar.registry csi-node-driver-registrar image registry
-  ## @param node.image.csiNodeDriverRegistrar.repository csi-node-driver-registrar image repository
-  ## @param node.image.csiNodeDriverRegistrar.tag csi-node-driver-registrar image tag (immutable tags are recommended)
-  ## @param node.image.csiNodeDriverRegistrar.digest csi-node-driver-registrar image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param node.image.csiNodeDriverRegistrar.name full path to csi-node-driver-registrar image (including tag/digest & registry)
   ## @param node.image.csiNodeDriverRegistrar.pullPolicy csi-node-driver-registrar image pull policy
   ## @param node.image.csiNodeDriverRegistrar.pullSecrets csi-node-driver-registrar image pull secrets
-  ## @param node.image.livenessProbe.registry liveness-probe image registry
-  ## @param node.image.livenessProbe.repository liveness-probe image repository
-  ## @param node.image.livenessProbe.tag liveness-probe image tag (immutable tags are recommended)
-  ## @param node.image.livenessProbe.digest liveness-probe image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param node.image.livenessProbe.name full path to liveness-probe image (including tag/digest & registry)
   ## @param node.image.livenessProbe.pullPolicy liveness-probe image pull policy
   ## @param node.image.livenessProbe.pullSecrets liveness-probe image pull secrets
-  ## @param node.image.hcloudCSIDriver.registry hcloud-csi-driver image registry
-  ## @param node.image.hcloudCSIDriver.repository hcloud-csi-driver image repository
-  ## @param node.image.hcloudCSIDriver.tag hcloud-csi-driver image tag (immutable tags are recommended)
-  ## @param node.image.hcloudCSIDriver.digest hcloud-csi-driver image digest in the way sha256:aa.... Please note this parameter, if set, will override the tag image tag (immutable tags are recommended)
+  ## @param node.image.hcloudCSIDriver.name full path to hcloud-csi-driver image (including tag/digest & registry)
   ## @param node.image.hcloudCSIDriver.pullPolicy hcloud-csi-driver image pull policy
   ## @param node.image.hcloudCSIDriver.pullSecrets hcloud-csi-driver image pull secrets
   ##
   image:
     csiNodeDriverRegistrar:
-      registry: registry.k8s.io
-      repository: sig-storage/csi-node-driver-registrar
-      tag: v2.7.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.7.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -447,10 +400,7 @@ node:
       pullSecrets: []
     
     livenessProbe:
-      registry: registry.k8s.io
-      repository: sig-storage/livenessprobe
-      tag: v2.9.0
-      digest: ""
+      name: registry.k8s.io/sig-storage/livenessprobe:v2.9.0
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -466,10 +416,7 @@ node:
       pullSecrets: []
 
     hcloudCSIDriver:
-      registry: docker.io
-      repository: hetznercloud/hcloud-csi-driver
-      tag: 'v{{ .Chart.Version }}'
-      digest: ""
+      name: docker.io/hetznercloud/hcloud-csi-driver:v{{ .Chart.Version }}
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
